--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
+@import 'modern-normalize/modern-normalize.css';
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-size: 18px;
+  font-family: var(--main-font);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --main-font: 'Noto Sans Display', sans-serif;
+  --secondary-bg: #b3a0a0;
+  --secondary-bg-accent: #706e6e;
+  --secondary-font-color: #ffffff;
+  --accent-font-color: #9e9a9a;
+}
+
+p {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
